--- a/services/back/package.json
+++ b/services/back/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node app/app.ts"
   },
   "devDependencies": {
     "@types/node": "^10.12.18",
