--- a/services/api/package.json
+++ b/services/api/package.json
@@ -1,10 +1,10 @@
 {
   "name": "api",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node app/app.ts"
   },
   "devDependencies": {
     "@types/node": "^10.12.18",
