--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,14 @@
   "packages": [
     "services/*"
   ],
-  "version": "independent"
+  "version": "independent",
+  "commands": {
+    "publish": {
+      "ignoreChanges": [
+        "**/*.md",
+        "**/example/**",
+        "**/test/**"
+      ]
+    }
+  }
 }
